fix lesson page on mobile

--- a/css/lesson.css
+++ b/css/lesson.css
@@ -4,6 +4,13 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
+  max-height: 100vh;
+
+}
+
+body{
+  width: 100vw;
+
 }
 main{
     display: flex;
@@ -66,13 +73,17 @@ main{
   }
   
   
-  @media screen and (max-device-width: 100%) {
+  @media screen and (max-device-width: 700px) {
     .output3{
-        height : 100%;
-        aspect-ratio: 9 / 16;
+        height : 70vh;
     }
   }
-  
+  @media (orientation: landscape) {
+    .output3{
+      height : 55vh;
+      width: 70vw;
+  }
+  }
   .video-controls,.inputs,.dropdown-wrapper, input{
     display: none;
   }
@@ -533,7 +544,7 @@ main{
   justify-content: center;
   align-items: center;
   width:100%;
-  height: 100%;
+  height: 100vh;
 }
 
 
@@ -550,7 +561,7 @@ main{
   margin-right: 5px;
   margin-left: 5px;
   height: 75px;
-  width: 150px;
+  width: 75px;
   justify-content: center;
   align-items: center;
   padding: 15px 38px;
@@ -693,7 +704,7 @@ main{
   justify-content: center;
   align-items: center;
   height: 75px;
-  width: 150px;
+  width: 75px;
   margin-right: 5px;
   margin-left: 5px;
   padding: 15px 38px;
